# polgen

./: .gitignore  CLAUDE.md  Cargo.toml  EMCORE_FEATURE_CONTRACT.md  LICENSE  README.md  TODO.md
crates/eaglemode/: Cargo.toml
crates/eaglemode/src/: main.rs
crates/eaglemode/tests/behavioral/: array.rs  avl_tree_map.rs  avl_tree_set.rs
crates/eaglemode/tests/golden/: control_panel.rs  cosmos_items.rs  main.rs  widget.rs
crates/eaglemode/tests/golden/data/compositor/: colorfield_expanded.compositor.golden  composed_splitter_content.compositor.golden  testpanel_expanded.compositor.golden  testpanel_root.compositor.golden  tktest_1x.compositor.golden  widget_colorfield_alpha_near.compositor.golden  widget_colorfield_alpha_opaque.compositor.golden  widget_colorfield_alpha_zero.compositor.golden  widget_listbox_single.compositor.golden  widget_scalarfield.compositor.golden  widget_scalarfield_max_value.compositor.golden  widget_scalarfield_min_value.compositor.golden  widget_scalarfield_zero_range.compositor.golden  widget_textfield_single_char_square.compositor.golden
crates/eaglemode/tests/golden/data/painter/: bezier_filled.painter.golden  bezier_stroked.painter.golden  clip_basic.painter.golden  cosmos_item_border.painter.golden  eagle_logo.painter.golden  ellipse_basic.painter.golden  ellipse_sector.painter.golden  ellipse_small.painter.golden  image_scaled.painter.golden  line_basic.painter.golden  line_dashed.painter.golden  line_ends_all.painter.golden  multi_compose.painter.golden  outline_ellipse.painter.golden  outline_polygon.painter.golden  (+17 more)
src/: lib.rs
(+576 files in other folders)
